--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-.centerxd{
+.h1{
     max-width: fit-content;
-    align-items: center;
     margin-left: auto;
     margin-right: auto;
 }
 .db{
     background-color: black;
     color: white;    
+}
+.content{
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
