--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     background-color: black;
     color: white;    
 }
-.content{
+.contentx{
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
